apps/jdgets/outlinewiki/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jdgets-outlinewiki-ingress
  namespace: jdgets-outlinewiki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - jdgets-outlinewiki.prodv2.cedille.club
      secretName: jdgets-outlinewiki-prod-tls
  rules:
    - host: jdgets-outlinewiki.prodv2.cedille.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jdgets-outlinewiki-svc
                port:
                  number: 3000
